--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,10 +1,9 @@
 {
   "name": "@cosmosjs/common",
-  "exports": {
-    ".": "./src/index.ts"
-  },
+  "module": "index.ts",
+  "type": "./src/module",
   "dependencies": {
     "typescript": "latest",
-    "pck-a": "workspace:*"
+    "@cosmosjs/core": "workspace:*"
   }
 }
