--- a/package.json
+++ b/package.json
@@ -15,6 +15,14 @@
     "packages/*"
   ],
   "devDependencies": {
-    "@types/bun": "^1.0.8"
+    "@types/bun": "^1.0.8",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^8.0.1",
+    "eslint-plugin-import": "^2.29.1"
+  },
+  "dependencies": {
+    "inversify": "^6.0.2",
+    "reflect-metadata": "^0.2.1"
   }
 }
