--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,9 @@
 {
   "compilerOptions": {
-    "lib": ["ESNext"],
-    "target": "ESNext",
-    "module": "ESNext",
+    "lib": ["ES2022"],
+    "target": "ES2022",
+    "module": "ES2022",
     "moduleDetection": "force",
-    "jsx": "react-jsx",
-    "allowJs": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -19,7 +17,4 @@
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "package/*"
-  ]
 }
