--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,20 +1,31 @@
 {
-  "$schema": "https://json.schemastore.org/tsconfig",
   "display": "CosmosJS Core",
   "compilerOptions": {
-    "declaration": true,
-    "declarationMap": true,
-    "esModuleInterop": true,
-    "incremental": false,
-    "isolatedModules": true,
-    "lib": ["es2022", "DOM", "DOM.Iterable"],
-    "module": "NodeNext",
-    "moduleDetection": "force",
-    "moduleResolution": "NodeNext",
-    "noUncheckedIndexedAccess": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
+    "lib": [
+      "ES2022"
+    ],
+    "target": "ES2022",
+    "module": "ES2022",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
     "strict": true,
-    "target": "ES2022"
-  }
+    "skipLibCheck": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "outDir": "./dist",
+    "baseUrl": ".",
+    "paths": {},
+    "types": [
+      "bun",
+      "node",
+      "reflect-metadata"
+    ],
+  },
+  "include": [
+    "src",
+  ],
 }
