--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,25 +1,26 @@
 {
-  "display": "CosmosJS Core",
   "compilerOptions": {
-    "lib": [
-      "ES2022"
-    ],
-    "target": "ES2022",
-    "module": "ES2022",
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
-    "strict": true,
+    "esModuleInterop": true,
     "skipLibCheck": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true,
-    "outDir": "./dist",
+    "target": "ES2022",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "moduleDetection": "force",
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "moduleResolution": "Bundler",
+    "module": "ES2022",
+    "noEmit": true,
+    "lib": ["ES2022"],
+    "outDir": ".",
     "baseUrl": ".",
     "paths": {
-      "@cosmosjs/core": ["./src"],
+      "@config/*": ["./src/config/*"],
+      "@interfaces/*": ["./src/interfaces/*"],
+      "@ioc/*": ["./src/ioc/*"],
+      "@services/*": ["./src/services/*"],
+      "@tests/*": ["./src/tests/*"],
+      "@utils/*": ["./src/utils/*"],
     },
     "types": [
       "bun",
@@ -27,4 +28,10 @@
       "reflect-metadata"
     ],
   },
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
