wip: update how the app was loading , add new adapters

--- a/sample/hono-hello-world/package.json
+++ b/sample/hono-hello-world/package.json
@@ -6,7 +6,8 @@
     "dev": "bun src/index.ts"
   },
   "dependencies": {
-    "@cosmosjs/core": "workspace:core"
+    "@cosmosjs/core": "workspace:*",
+    "@cosmosjs/hono-openapi": "workspace:*"
   },
   "devDependencies": {
     "@types/bun": "latest"
