--- a/sample/hono-hello-world/tsconfig.json
+++ b/sample/hono-hello-world/tsconfig.json
@@ -16,6 +16,7 @@
     /* Linting */
     "skipLibCheck": true,
     "strict": true,
+    "types": ["reflect-metadata"],
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true
   }
