--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "@cosmosjs/core",
-  "exports": {
-    ".": "./src/index.ts"
-  },
-  "scripts": {
-    "build": "bun build ./src/index.ts --target bun --minify --outdir ./dist"
-  },
-  "dependencies": {
-    "typescript": "latest"
-  }
+	"name": "@cosmosjs/core",
+	"exports": {
+		".": "./src/index.ts"
+	},
+	"scripts": {
+		"build": "bun build ./src/index.ts --target bun --minify --outdir ./dist"
+	},
+	"dependencies": {
+		"inversify": "^6.0.2",
+		"reflect-metadata": "^0.2.1",
+		"typescript": "^5.4.2",
+		"zod": "^3.22.4"
+	}
 }
