--- a/packages/hono-openapi-adapter/package.json
+++ b/packages/hono-openapi-adapter/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@cosmosjs/hono-openapi",
-  "exports": {
-    ".": "./src/index.ts"
-  },
-  "scripts": {
-    "build": "bun build ./src/index.ts --target bun --minify --outdir ./dist"
-  },
-  "dependencies": {
-    "typescript": "latest",
-    "@cosmosjs/core": "workspace:core"
-  }
+	"name": "@cosmosjs/hono-openapi",
+	"exports": {
+		".": "./src/index.ts"
+	},
+	"scripts": {
+		"build": "bun build ./src/index.ts --target bun --minify --outdir ./dist"
+	},
+	"dependencies": {
+		"typescript": "^5.4.2",
+		"@cosmosjs/core": "workspace:core"
+	}
 }
