--- a/sample/hono-hello-world/tsconfig.json
+++ b/sample/hono-hello-world/tsconfig.json
@@ -18,6 +18,9 @@
     "strict": true,
     "types": ["reflect-metadata"],
     "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "paths": {
+      "@app/*": ["./src/*"]
+    }
   }
 }
