--- a/sample/hono-hello-world/tsconfig.json
+++ b/sample/hono-hello-world/tsconfig.json
@@ -20,7 +20,8 @@
     "noFallthroughCasesInSwitch": true,
     "forceConsistentCasingInFileNames": true,
     "paths": {
-      "@app/*": ["./src/*"]
+      "@app/*": ["./src/*"],
+      "@start/*": ["./src/start/*"]
     }
   }
 }
