--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
 	"name": "cosmosjs",
 	"private": true,
 	"scripts": {
-		"build": "turbo build",
+		"test": "turbo run test",
+		"build": "turbo run build",
 		"lint": "bunx biome check ./packages",
 		"lint:safe": "bunx biome check --apply ./packages",
 		"lint:unsafe": "bunx biome check --apply-unsafe  ./packages"
