--- a/turbo.json
+++ b/turbo.json
@@ -1,16 +1,13 @@
 {
-  "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": ["**/.env.*local"],
-  "pipeline": {
-    "build": {
-      "dependsOn": ["^build"]
-    },
-    "lint": {
-      "dependsOn": ["^lint"]
-    },
-    "dev": {
-      "cache": false,
-      "persistent": true
-    }
-  }
+	"$schema": "https://turbo.build/schema.json",
+	"globalDependencies": ["**/.env.*local"],
+	"pipeline": {
+		"lint": {},
+		"test": {
+			"dependsOn": ["^lint"]
+		},
+		"build": {
+			"dependsOn": ["^test"]
+		}
+	}
 }
