--- a/packages/common/tsconfig.json
+++ b/packages/common/tsconfig.json
@@ -14,6 +14,8 @@
 		"noUncheckedIndexedAccess": true,
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
 		"strict": true,
 		"target": "ES2022",
 		"types": ["bun"]
