--- a/packages/hono-openapi-adapter/tsconfig.json
+++ b/packages/hono-openapi-adapter/tsconfig.json
@@ -15,6 +15,8 @@
 		"resolveJsonModule": true,
 		"skipLibCheck": true,
 		"strict": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
 		"target": "ES2022",
 		"types": ["bun"]
 	}
