--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
 		"enabled": true
 	},
 	"files": {
-		"ignore": ["**/*/dist"]
+		"ignore": ["**/*/dist", "node_modules/**/*"]
 	},
 	"linter": {
 		"enabled": true,
