--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
-	"name": "cosmosjs",
-	"private": true,
-	"scripts": {
-		"test": "bunx turbo run test",
-		"build": "bunx turbo run build",
-		"lint": "bunx biome check ./packages",
-		"lint:safe": "bunx biome check --apply ./packages",
-		"lint:unsafe": "bunx biome check --apply-unsafe  ./packages"
-	},
-	"engines": {
-		"node": ">=20.11.0"
-	},
-	"packageManager": "bun@1.0.25",
-	"workspaces": ["packages/*", "sample/*"],
-	"devDependencies": {
-		"@biomejs/biome": "1.6.1",
-		"@types/bun": "^1.0.8",
-		"typescript": "^5.4.2"
-	}
+  "name": "cosmosjs",
+  "private": true,
+  "scripts": {
+    "test": "bunx turbo run test",
+    "build": "bunx turbo run build",
+    "lint": "bunx biome check ./packages",
+    "lint:safe": "bunx biome check --apply ./packages",
+    "lint:unsafe": "bunx biome check --apply-unsafe  ./packages",
+    "prepare": "husky"
+  },
+  "engines": {
+    "node": ">=20.11.0"
+  },
+  "packageManager": "bun@1.0.25",
+  "workspaces": [
+    "packages/*",
+    "sample/*"
+  ],
+  "devDependencies": {
+    "@biomejs/biome": "1.6.1",
+    "@types/bun": "^1.0.8",
+    "husky": "^9.0.11",
+    "typescript": "^5.4.2"
+  }
 }
