--- a/packages/hono-openapi-adapter/tsconfig.json
+++ b/packages/hono-openapi-adapter/tsconfig.json
@@ -2,6 +2,6 @@
 	"compilerOptions": {
 		"strict": true,
 		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true,
+		"experimentalDecorators": true
 	}
 }
