wip: inversify assignment doesn't work

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,6 +13,11 @@
 		"inversify": "^6.0.2",
 		"reflect-metadata": "^0.2.1",
 		"typescript": "^5.4.2",
-		"zod": "^3.22.4"
+		"zod": "^3.22.4",
+		"pino": "^8.19.0"
+	},
+	"devDependencies": {
+		"@types/bun": "^1.0.8",
+		"pino-pretty": "^10.3.1"
 	}
 }
