--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -1,20 +1,22 @@
 {
 	"compilerOptions": {
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"target": "ES2022",
-		"resolveJsonModule": true,
-		"isolatedModules": true,
-		"moduleDetection": "force",
-		"strict": true,
-		"noUncheckedIndexedAccess": true,
-		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true,
-		"moduleResolution": "Bundler",
-		"module": "ES2022",
-		"noEmit": true,
 		"lib": ["ES2022"],
-		"outDir": ".",
+		"target": "ES2022",
+		"module": "ES2022",
+		"moduleDetection": "force",
+		"experimentalDecorators": true,
+		"emitDecoratorMetadata": true,
+		// Bundler mode
+		"moduleResolution": "bundler",
+		"allowImportingTsExtensions": true,
+		"noEmit": true,
+		// Best practices
+		"strict": true,
+		"skipLibCheck": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true,
+		"outDir": "./dist",
 		"baseUrl": ".",
 		"paths": {
 			"@config/*": ["./src/config/*"],
@@ -24,8 +26,7 @@
 			"@tests/*": ["./src/tests/*"],
 			"@utils/*": ["./src/utils/*"]
 		},
-		"types": ["bun", "node"]
+		"types": ["bun", "node", "reflect-metadata"]
 	},
-	"include": ["src"],
-	"exclude": ["node_modules"]
+	"include": ["src"]
 }
