--- a/packages/hono-openapi-adapter/tsconfig.json
+++ b/packages/hono-openapi-adapter/tsconfig.json
@@ -1,7 +1,24 @@
 {
 	"compilerOptions": {
-		"strict": true,
+		"lib": ["ES2022"],
+		"target": "ES2022",
+		"module": "ES2022",
+		"moduleDetection": "force",
+		"experimentalDecorators": true,
 		"emitDecoratorMetadata": true,
-		"experimentalDecorators": true
-	}
+		// Bundler mode
+		"moduleResolution": "bundler",
+		"allowImportingTsExtensions": true,
+		"noEmit": true,
+		// Best practices
+		"strict": true,
+		"skipLibCheck": true,
+		"noUnusedLocals": true,
+		"noUnusedParameters": true,
+		"noFallthroughCasesInSwitch": true,
+		"outDir": "./dist",
+		"baseUrl": ".",
+		"types": ["bun", "node", "reflect-metadata"]
+	},
+	"include": ["src"]
 }
