--- a/package.json
+++ b/package.json
@@ -13,22 +13,12 @@
     "node": ">=20.11.0"
   },
   "packageManager": "bun@1.0.25",
-  "workspaces": [
-    "packages/*",
-    "sample/*"
-  ],
+  "workspaces": ["packages/*", "sample/*"],
   "devDependencies": {
     "@biomejs/biome": "1.6.1",
-    "@types/bun": "^1.0.8",
-    "husky": "^9.0.11",
-    "pino-pretty": "^10.3.1",
-    "typescript": "^5.4.2"
+    "husky": "^9.0.11"
   },
   "dependencies": {
-    "@hono/zod-openapi": "^0.9.8",
-    "hono": "^4.1.1",
-    "inversify": "^6.0.2",
-    "pino": "^8.19.0",
-    "zod": "^3.22.4"
+    "inversify-inject-decorators": "^3.1.0"
   }
 }
