--- a/sample/hono-hello-world/tsconfig.json
+++ b/sample/hono-hello-world/tsconfig.json
@@ -1,21 +1,36 @@
 {
   "compilerOptions": {
-    "lib": ["ES2022"],
+    "lib": [
+      "ES2022"
+    ],
     "target": "ES2022",
     "module": "ES2022",
     "moduleDetection": "force",
-		"moduleResolution": "bundler",
-    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "skipLibCheck": true,
+    "emitDecoratorMetadata": true,
+    // Bundler mode
+    "moduleResolution": "bundler",
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
+    // Best practices
     "strict": true,
-    "noFallthroughCasesInSwitch": true,
-    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "noFallthroughCasesInSwitch": true,
+    "outDir": "./dist",
+    "baseUrl": ".",
     "paths": {
       "@app/*": ["./src/app/*"],
       "@start/*": ["./src/start/*"]
     },
-    "types": ["bun", "reflect-metadata"],
+    "types": [
+      "bun",
+      "node",
+      "reflect-metadata"
+    ],
   },
+  "include": [
+    "src",
+  ]
 }
