--- a/biome.json
+++ b/biome.json
@@ -1,42 +1,48 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.6.1/schema.json",
-	"organizeImports": {
-		"enabled": true
-	},
-	"files": {
-		"ignore": ["**/*/dist", "node_modules/**/*"]
-	},
-	"linter": {
-		"enabled": true,
-		"rules": {
-			"recommended": true,
-			"suspicious": {
-				"noExplicitAny": "off",
-				"noConfusingVoidType": "off",
-				"noImportAssign": "error"
-			},
-			"complexity": {
-				"noUselessConstructor": "error",
-				"noStaticOnlyClass": "off",
-				"noBannedTypes": "off"
-			},
-			"style": {
-				"noUselessElse": "off"
-			},
-			"correctness": {
-				"noUnusedImports": "error"
-			}
-		}
-	},
-	"formatter": {
-		"lineWidth": 140
-	},
-	"javascript": {
-		"formatter": {
-			"quoteStyle": "single"
-		},
-		"parser": {
-			"unsafeParameterDecoratorsEnabled": true
-		}
-	}
+  "$schema": "https://biomejs.dev/schemas/1.6.1/schema.json",
+  "organizeImports": {
+    "enabled": true
+  },
+  "files": {
+    "ignore": [
+      "**/*/dist",
+      "node_modules/**/*"
+    ]
+  },
+  "linter": {
+    "enabled": true,
+    "rules": {
+      "recommended": true,
+      "suspicious": {
+        "noExplicitAny": "off",
+        "noConfusingVoidType": "off",
+        "noImportAssign": "error"
+      },
+      "complexity": {
+        "noUselessConstructor": "error",
+        "noStaticOnlyClass": "off",
+        "noBannedTypes": "off"
+      },
+      "style": {
+        "noUselessElse": "off"
+      },
+      "correctness": {
+        "noUnusedImports": "error"
+      }
+    }
+  },
+  "formatter": {
+    "enabled": true,
+    "lineWidth": 140,
+    "indentStyle": "space",
+    "indentWidth": 2
+  },
+  "javascript": {
+    "formatter": {
+      "quoteStyle": "single"
+    },
+    "parser": {
+      "unsafeParameterDecoratorsEnabled": true
+    }
+  }
 }
