--- a/sample/hono-openapi-prisma-user-crud-sentry/.env.template
+++ b/sample/hono-openapi-prisma-user-crud-sentry/.env.template
@@ -1,3 +1,3 @@
 PORT=3008
 ENV=DEV
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL="mysql://root:example@localhost:3306/dev"
