--- a/sample/hono-openapi-prisma-user-crud-sentry/package.json
+++ b/sample/hono-openapi-prisma-user-crud-sentry/package.json
@@ -1,22 +1,23 @@
 {
-	"name": "hono-openapi-prisma-user-crud-sentry",
-	"module": "index.ts",
-	"type": "module",
-	"scripts": {
-		"dev": "bun run --hot src/index.ts"
-	},
-	"dependencies": {
-		"@cosmosjs/core": "workspace:*",
-		"@cosmosjs/hono-openapi": "workspace:*",
-		"dotenv": "^16.4.5",
-		"inversify": "^6.0.2",
-		"reflect-metadata": "^0.2.1",
-		"prisma": "^5.11.0"
-	},
-	"devDependencies": {
-		"@types/bun": "^1.0.8"
-	},
-	"peerDependencies": {
-		"typescript": "^5.4.2"
-	}
+  "name": "hono-openapi-prisma-user-crud-sentry",
+  "module": "index.ts",
+  "type": "module",
+  "scripts": {
+    "dev": "bun run --hot src/index.ts"
+  },
+  "dependencies": {
+    "@cosmosjs/core": "workspace:*",
+    "@cosmosjs/hono-openapi": "workspace:*",
+    "@prisma/client": "5.11.0",
+    "dotenv": "^16.4.5",
+    "inversify": "^6.0.2",
+    "prisma": "^5.11.0",
+    "reflect-metadata": "^0.2.1"
+  },
+  "devDependencies": {
+    "@types/bun": "^1.0.8"
+  },
+  "peerDependencies": {
+    "typescript": "^5.4.2"
+  }
 }
