wip: add hono customization

--- a/sample/hono-openapi-prisma-user-crud-sentry/package.json
+++ b/sample/hono-openapi-prisma-user-crud-sentry/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@cosmosjs/core": "workspace:*",
     "@cosmosjs/hono-openapi": "workspace:*",
+    "hono": "^4.1.1",
     "@prisma/client": "5.11.0",
     "dotenv": "^16.4.5",
     "inversify": "^6.0.2",
