wip: handle error, add adapter abstract

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -23,6 +23,7 @@
       "@interfaces/*": ["./src/interfaces/*"],
       "@ioc/*": ["./src/ioc/*"],
       "@services/*": ["./src/services/*"],
+      "@customTypes/*": ["./src/types/*"],
       "@tests/*": ["./src/tests/*"],
       "@utils/*": ["./src/utils/*"]
     },
