--- a/packages/hono-openapi-adapter/tsconfig.json
+++ b/packages/hono-openapi-adapter/tsconfig.json
@@ -27,7 +27,7 @@
       "@middlewares/*": ["./src/middlewares/*"],
       "@server/*": ["./src/server/*"],
       "@start/*": ["./src/start/*"],
-      "@types/*": ["./src/types/*"],
+      "@customTypes/*": ["./src/types/*"],
       "@utils/*": ["./src/utils/*"]
     }
   },
