--- a/packages/hono-openapi-adapter/package.json
+++ b/packages/hono-openapi-adapter/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@cosmosjs/core": "workspace:*",
+    "@hono/swagger-ui": "^0.2.1",
     "@hono/zod-openapi": "^0.9.8",
     "hono": "^4.1.1",
     "http-status-codes": "^2.3.0",
