add exceptions path

--- a/sample/hono-openapi-prisma-user-crud-sentry/tsconfig.json
+++ b/sample/hono-openapi-prisma-user-crud-sentry/tsconfig.json
@@ -22,7 +22,8 @@
     "baseUrl": ".",
     "paths": {
       "@app/*": ["./src/app/*"],
-      "@start/*": ["./src/start/*"]
+      "@exceptions/*": ["./src/exceptions/*"],
+      "@start/*": ["./src/start/*"],
     },
     "types": [
       "bun",
