--- a/sample/hono-openapi-prisma-user-crud-sentry/package.json
+++ b/sample/hono-openapi-prisma-user-crud-sentry/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "@cosmosjs/core": "workspace:*",
     "@cosmosjs/hono-openapi": "workspace:*",
-    "hono": "^4.1.1",
+    "@hono/sentry": "^1.0.0",
     "@prisma/client": "5.11.0",
     "dotenv": "^16.4.5",
+    "hono": "^4.1.1",
+    "http-status-codes": "^2.3.0",
     "inversify": "^6.0.2",
     "prisma": "^5.11.0",
     "reflect-metadata": "^0.2.1"
