--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "cosmosjs",
-  "private": true,
+  "name": "cosmoosjs",
   "scripts": {
     "test": "bunx turbo run test",
-    "build": "bunx turbo run build",
+    "build": "bunx turbo run build && bunx changeset version && bunx changeset publish",
     "lint": "bunx biome check ./packages",
     "lint:safe": "bunx biome check --apply ./packages",
     "lint:unsafe": "bunx biome check --apply-unsafe  ./packages",
@@ -13,9 +12,12 @@
     "node": ">=20.11.0"
   },
   "packageManager": "bun@1.0.25",
-  "workspaces": ["packages/*", "sample/*"],
+  "workspaces": ["packages/*"],
   "devDependencies": {
     "@biomejs/biome": "1.6.1",
     "husky": "^9.0.11"
-  }
+  },
+  "dependencies": {
+    "@changesets/cli": "^2.27.1"
+  },
 }
