--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # Dependencies
 node_modules
-.pnp
-.pnp.js
 
 # Local env files
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # Testing
 coverage
@@ -21,18 +13,11 @@ coverage
 # Vercel
 .vercel
 
-# Build Outputs
-.next/
-out/
-build
-dist
-
-
-# Debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 
 # Misc
 .DS_Store
 *.pem
+
+# bundle
+packages/**/*.d.ts
+packages/**/*.js
