--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "cosmoosjs",
   "scripts": {
     "test": "bunx turbo run test",
-    "build": "bunx turbo run build && bunx changeset version && bunx changeset publish",
+    "build": "bunx turbo run build",
+    "version": "bunx changeset version",
+    "publish": "bunx changeset publish",
     "lint": "bunx biome check ./packages",
     "lint:safe": "bunx biome check --apply ./packages",
     "lint:unsafe": "bunx biome check --apply-unsafe  ./packages",
