--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -9,15 +9,13 @@
     "emitDecoratorMetadata": true,
     // Bundler mode
     "moduleResolution": "bundler",
-    "allowImportingTsExtensions": true,
-    "noEmit": true,
     // Best practices
     "strict": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "outDir": "./dist",
+    "outDir": "./src",
     "baseUrl": ".",
     "paths": {
       "@config/*": ["./src/config/*"],
