--- a/packages/hono-openapi-adapter/package.json
+++ b/packages/hono-openapi-adapter/package.json
@@ -2,11 +2,12 @@
   "name": "@cosmoosjs/hono-openapi",
   "version": "1.0.1",
   "description": "Http server using hono zod for @cosmoosjs/core",
-  "main": "./src/index.js",
-  "types": "./src/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "license": "MIT",
   "exports": {
-    ".": "./src/index.ts"
+    ".": "./dist/index.js"
   },
   "repository": {
     "type": "git",
@@ -16,9 +17,8 @@
     "url": "https://github.com/ae-creator/CosmosJS/issues"
   },
   "scripts": {
-    "build": "bun build ./src/index.ts --minify --target=bun && bun run build:declaration",
-    "build:declaration": "bunx tsc --emitDeclarationOnly --outDir ./src",
-    "dev": "bun run --hot src/index.ts"
+    "build": "bunx tsup src/index.ts --format cjs,esm --dts",
+    "lint": "bunx biome lint ./src"
   },
   "dependencies": {
     "@cosmoosjs/core": "^1.0.2",
