--- a/packages/hono-openapi-adapter/tsconfig.json
+++ b/packages/hono-openapi-adapter/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "compilerOptions": {
-    "lib": [
-      "ES2022"
-    ],
+    "lib": ["ES2022"],
     "target": "ES2022",
     "module": "nodenext",
     "declaration": true,
@@ -17,39 +15,17 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
-    "types": [
-      "bun",
-      "node",
-      "reflect-metadata"
-    ],
+    "types": ["bun", "node", "reflect-metadata"],
     "paths": {
-      "@guards/*": [
-        "./src/guards/*"
-      ],
-      "@decorators/*": [
-        "./src/decorators/*"
-      ],
-      "@enums/*": [
-        "./src/enums/*"
-      ],
-      "@ioc/*": [
-        "./src/ioc/*"
-      ],
-      "@middlewares/*": [
-        "./src/middlewares/*"
-      ],
-      "@server/*": [
-        "./src/server/*"
-      ],
-      "@start/*": [
-        "./src/start/*"
-      ],
-      "@customTypes/*": [
-        "./src/types/*"
-      ],
-      "@utils/*": [
-        "./src/utils/*"
-      ]
+      "@guards/*": ["./src/guards/*"],
+      "@decorators/*": ["./src/decorators/*"],
+      "@enums/*": ["./src/enums/*"],
+      "@ioc/*": ["./src/ioc/*"],
+      "@middlewares/*": ["./src/middlewares/*"],
+      "@server/*": ["./src/server/*"],
+      "@start/*": ["./src/start/*"],
+      "@customTypes/*": ["./src/types/*"],
+      "@utils/*": ["./src/utils/*"]
     }
   }
 }
