--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cosmoosjs/core",
   "description": "create backend applications quickly and easily with bun.sh",
-  "version": "1.0.9",
+  "version": "1.0.11",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -9,6 +9,7 @@
   "exports": {
     ".": "./dist/index.js"
   },
+  "files": ["dist"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ae-creator/CosmosJS.git#main"
